--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solana-rewards",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "16.1.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "@solana/web3.js": "^1.98.4",
     "ethers": "^6.13.2",
-    "next": "16.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@walletconnect/web3-provider": "^1.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "16.1.6",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.17"
   }
